# ogl

./: #CMakeLists.txt#  .#CMakeLists.txt  .clang-format  .directory  CMakeLists.txt  GPATH  GRTAGS  GTAGS  compile_commands.json  main.cpp  one.cpp  readme.org  run.sh
emacs/: init.el  myinit.org
emacs/emacsOld/: init.el
include/glad/: #glad.h#  glad.h
include/user/: data.h  glContextData.h  initWinGlfw.h  initWindow.h
lib/: glfw3.lib
res/shaders/: shader.frag  shader.vert
res/vertexData/: sam.wow
src/: #main.cpp#  glad.c  glad.cpp  initWindow.cpp  main.cpp  main3.cpp
